fix: fixed an error of huge profile image and incorrect view on mobile devices
This error was caused by an incorrect handled of style properties

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -65,6 +65,6 @@ body {
 }
 
 .body-container {
-  width: var(--max-width);
+  max-width: var(--max-width);
   margin: 0 auto;
 }
